hphp/hack/test/typecheck/shape_idx_missing_field.php.exp
File "shape_idx_missing_field.php", line 4, characters 10-29:
Invalid return type (Typing[4110])
File "shape_idx_missing_field.php", line 3, characters 40-40:
Expected T
File "Shapes.hhi", line 35, characters 26-28:
But got nonnull
